--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       <div class="relative after:bg-spikes1 after:absolute after:w-full after:h-7 after:right-0 after:bg-[length:30px_30px]"></div>
       <!-- end features -->
       <!-- start testimonials -->
-      <section class="py-24 bg-backg">
+      <section class="py-24 bg-backg" id="testimonials">
         <h1 class="head mb-20">testimonials</h1>
         <div class="container grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 gap-10">
           <div class="bg-white p-5 rounded-lg relative">
@@ -357,7 +357,7 @@
       <div class="relative after:bg-spikes2 after:absolute after:w-full after:h-7 after:right-0 after:bg-[length:30px_30px]"></div>
       <!-- end testimonials -->
       <!-- start TEAM MEMBERS -->
-      <section class="py-24">
+      <section class="py-24" id="team">
         <h1 class="head ">TEAM MEMBERS</h1>
         <div class="container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 ">
           <div class="group/scal w-full relative before:absolute before:w-4/5 before:h-full before:bg-stone-100 before:-z-10 before:right-0 before:rounded-2xl 
@@ -493,7 +493,7 @@
       <div class="relative after:bg-spikes1 after:absolute after:w-full after:h-7 after:right-0 after:bg-[length:30px_30px]"></div>
       <!-- end TEAM MEMBERS -->
   <!-- start SERVICES -->
-  <section class="py-24 bg-backg">
+  <section class="py-24 bg-backg " id="services">
     <h1 class="head">services</h1>
     <div class="container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
       <div class="text-center bg-white shadow-xl relative hover:-translate-y-3 transition-all duration-300 before:absolute before:h-1 before:w-0 before:bg-main before:top-0 before:left-1/2 hover:before:w-full before:-translate-x-1/2 before:transition-all before:duration-300 ">
@@ -543,7 +543,7 @@
  
   <!-- end SERVICES -->
   <!-- start Skills -->
-<section class="py-24">
+<section class="py-24 " id="our-skills">
   <h1 class="head">our skills</h1>
 <div class="container flex justify-center items-center">
   <img class="hidden lg:block" src="./dist/imgs/skills.png" alt="#">
@@ -588,7 +588,7 @@
 
   <!-- end Skills -->
   <!-- start HOW IT WORKS ? -->
-<section class="py-24 bg-backg relative z-10">
+<section class="py-24 bg-backg relative z-10" id="work-steps">
   <img class="top-52 right-0 absolute -z-10" src="./dist/imgs/dots.png" alt="">
   <img class="bottom-52 left-0 absolute -z-10" src="./dist/imgs/dots.png" alt="">
   <h1 class="head">HOW IT WORKS ?</h1>
@@ -622,7 +622,7 @@
 <div class="relative after:bg-spikes2 after:absolute after:w-full after:h-7 after:right-0 after:bg-[length:30px_30px]"></div>
   <!-- End HOW IT WORKS ? -->
   <!-- start Latest Events -->
-<section class="py-24">
+<section class="py-24" id="events">
 <h1 class="head">Latest Events</h1>
 <div class="container flex flex-col lg:flex-row justify-center items-center flex-wrap gap-10">
   <img src="./dist/imgs/events.png" alt="">
@@ -657,7 +657,7 @@
 <div class="relative after:bg-spikes1 after:absolute after:w-full after:h-7 after:right-0 after:bg-[length:30px_30px]"></div>
   <!-- end Latest Events -->
   <!-- start PRICING PLANS  -->
-<section class="py-24 bg-backg relative"> 
+<section class="py-24 bg-backg relative" id="pricing"> 
   <img class="top-52 right-0 absolute" src="./dist/imgs/dots.png" alt="">
   <img class="bottom-52 left-0 absolute" src="./dist/imgs/dots.png" alt="">
   <h1 class="head">PRICING PLANS</h1>
@@ -711,10 +711,9 @@
   </div>
 </section>
 <div class="relative after:bg-spikes2 after:absolute after:w-full after:h-7 after:right-0 after:bg-[length:30px_30px]"></div>
-
   <!-- end PRICING PLANS -->
   <!-- start TOP VIDEOS -->
-<section class="py-24">
+<section class="py-24"  id="video">
 <h1 class="head">TOP VIDEOS</h1>
 <div class="container flex flex-col lg:flex-row">
   <div class=" border border-backg min-w-96">
@@ -762,7 +761,7 @@
 </section>
   <!-- end TOP VIDEOS -->
   <!-- start Our Awesome Stats -->
-<section class="py-24 bg-[url(./imgs/stats.jpg)] relative z-10 before:absolute  before:inset-0  before:bg-white/95 before:-z-10 ">
+<section id="stats" class="py-24 bg-[url(./imgs/stats.jpg)] relative z-10 before:absolute  before:inset-0  before:bg-white/95 before:-z-10 ">
   <h1 class="mb-10 text-center font-extrabold text-4xl">Our Awesome Stats</h1>
   <div class="container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-5">
     <div class="box bg-white p-5 flex flex-col items-center space-y-3 relative before:absolute before:w-0.5  before:h-0 before:bg-main before:bottom-0 before:left-0 hover:before:h-full before:transition-all before:duration-700
@@ -798,7 +797,7 @@
 </section>
   <!-- End Our Awesome Stats -->
   <!-- start  Discount -->
-  <section class="flex flex-col lg:flex-row justify-center items-center">
+  <section class="flex flex-col lg:flex-row justify-center items-center" id="discount">
     <div class="w-full lg:w-1/2 h-4/6 lg:h-screen flex flex-col justify-center items-center py-10  text-white text-center relative z-20 bg-[url('./imgs/discount-background1.jpg')] animate-change-bg before:absolute before:inset-0 before:bg-main/95 before:-z-10">
       <h2 class="text-4xl font-bold ">We Have A Discount</h2>
       <p class="max-w-prose text-lg mt-7">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi asperiores consectetur, recusandae ratione provident necessitatibus, cumque delectus commodi fuga praesentium beatae. Totam vel similique laborum dicta aperiam odit doloribus corporis.</p>
