--- a/index.html
+++ b/index.html
@@ -669,11 +669,11 @@
         <span class="block text-center mt-7 text-6xl font-black text-main">$15</span>
         <span class="block mb-5 text-center text-777">Per Month</span>
         <ul class="divide-y border-t">
-        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2  before:text-main ">10GB HDD Space</li>
-        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2  before:text-main ">2 Subdomains</li>
-        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2  before:text-main ">5 Email Addresses</li>
-        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2  before:text-main ">4 Databases</li>
-        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2  before:text-main ">Basic Support</li>
+        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2 before:font-black  before:text-main ">10GB HDD Space</li>
+        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2 before:font-black  before:text-main ">2 Subdomains</li>
+        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2 before:font-black  before:text-main ">5 Email Addresses</li>
+        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2 before:font-black  before:text-main ">4 Databases</li>
+        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2 before:font-black  before:text-main ">Basic Support</li>
       </ul>
       <a class="block w-fit mx-auto mt-5 px-4 py-2 border-2 border-main text-lg font-bold rounded-md text-main  hover:text-white hover:bg-main transition-all duration-300" href="#">Choose Plan</a>
     </div>
@@ -685,11 +685,11 @@
         <span class="block text-center mt-7 text-6xl font-black text-main">$25</span>
         <span class="block mb-5 text-center text-777">Per Month</span>
         <ul class="divide-y border-t">
-        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2  before:text-main ">20GB HDD Space</li>
-        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2  before:text-main ">5 Subdomains</li>
-        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2  before:text-main ">10 Email Addresses</li>
-        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2  before:text-main ">8 Databases</li>
-        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2  before:text-main ">Advanced  Support</li>
+        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2 before:font-black before:text-main ">20GB HDD Space</li>
+        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2 before:font-black before:text-main ">5 Subdomains</li>
+        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2 before:font-black before:text-main ">10 Email Addresses</li>
+        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2 before:font-black before:text-main ">8 Databases</li>
+        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2 before:font-black before:text-main ">Advanced  Support</li>
       </ul>
       <a class="block w-fit mx-auto mt-5 px-4 py-2 border-2 border-main text-lg font-bold rounded-md text-main hover:text-white hover:bg-main transition-all duration-300" href="#">Choose Plan</a>
     </div>
@@ -700,11 +700,11 @@
         <span class="block text-center mt-7 text-6xl font-black text-main">$45</span>
         <span class="block mb-5 text-center text-777">Per Month</span>
         <ul class="divide-y border-t">
-        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2  before:text-main ">50GB HDD Space</li>
-        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2  before:text-main ">10 Subdomains</li>
-        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2  before:text-main ">20 Email Addresses</li>
-        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2  before:text-main ">20 Databases</li>
-        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2  before:text-main ">Professional  Support</li>
+        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2 before:font-black  before:text-main ">50GB HDD Space</li>
+        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2 before:font-black  before:text-main ">10 Subdomains</li>
+        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2 before:font-black  before:text-main ">20 Email Addresses</li>
+        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2 before:font-black  before:text-main ">20 Databases</li>
+        <li class="p-4 before:content-['\f00c'] relative before:font-['Font_Awesome_6_Free'] before:mr-2 before:font-black  before:text-main ">Professional  Support</li>
       </ul>
       <a class="block w-fit mx-auto mt-5 px-4 py-2 border-2 border-main text-lg font-bold rounded-md text-main  hover:text-white hover:bg-main transition-all duration-300" href="#">Choose Plan</a>
     </div>
