--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
   <section class="flex flex-col lg:flex-row justify-center items-center" id="discount">
     <div class="w-full lg:w-1/2 h-4/6 lg:h-screen flex flex-col justify-center items-center py-10  text-white text-center relative z-20 bg-[url('./imgs/discount-background1.jpg')] animate-change-bg before:absolute before:inset-0 before:bg-main/95 before:-z-10">
       <h2 class="text-4xl font-bold ">We Have A Discount</h2>
-      <p class="max-w-prose text-lg mt-7">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi asperiores consectetur, recusandae ratione provident necessitatibus, cumque delectus commodi fuga praesentium beatae. Totam vel similique laborum dicta aperiam odit doloribus corporis.</p>
+      <p class="max-w-prose text-lg mt-7 px-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi asperiores consectetur, recusandae ratione provident necessitatibus, cumque delectus commodi fuga praesentium beatae. Totam vel similique laborum dicta aperiam odit doloribus corporis.</p>
       <img class="max-w-full" src="./dist/imgs/discount.png" alt="">
     </div>
     <div class="w-full lg:w-1/2 h-4/6 lg:h-screen flex flex-col justify-center items-center py-10 ">
